--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ html {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     /* vì position fixed nên header sẽ nổi lên nhường cho phần sau
     là slider, chiếm lun không gian */
-    z-index: 1;
+    z-index: 2;
 }
 
 #nav {
@@ -168,8 +168,8 @@ html {
     
 }
 
-/* -----------------------------------------------------------------Slider---------------------------------------------------------------------- */
-/* -------------------------------------------------------------------v------------------------------------------------------------------------- */
+/* -----------------------------------------------------------------Slider--------------------------------------------------------------------- */
+/* -------------------------------------------------------------------v------------------------------------------------------------------------ */
 
 #slider {
     /* Đặt trục toạ độ góc trên bên trái */
@@ -177,7 +177,8 @@ html {
     margin-top: 50px;
     /* 50% của chính nó */
     padding-top: 45%;
-    background: url('../../assets/Kho_Anh/iStock-695349930.png') top center / cover no-repeat;
+    /* background: url('/assets/Kho_Anh/iStock-695349930.png') top center / cover no-repeat; */
+    background: url('./background/iStock-695349930.png') top center / cover no-repeat;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     border-radius: 0px 0px 20% 0px;
     animation: colorBackground 20s infinite;
@@ -683,7 +684,8 @@ html {
     margin-bottom: 50px;
     /* 50% của chính nó */
     /* padding-top: 50%; */
-    background: url('../../assets/Kho_Anh/reviewer.png') top center / cover no-repeat;
+    /* background: url('./assets/Kho_Anh/reviewer.png') top center / cover no-repeat; */
+    background: url('./background/reviewer.png') top center / cover no-repeat;
     /* background-color: #ccc; */
 }
 
@@ -693,8 +695,12 @@ html {
     color: #FFFFFF;
     text-align: center;
     letter-spacing: 4px;
+    margin-left: 40%;
+    width: 400px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    animation: flipInY ease-in 15s infinite alternate;
+    /* animation: flipInY ease-in 15s infinite alternate; */
+    animation: swing linear 10s infinite alternate;
+
 }
 
 .the-review {
@@ -771,7 +777,9 @@ html {
 
 .thiet-bi-y-te {
     margin: 40px 0;
-    background: url('../../assets/Kho_Anh/Rth.png') top center / cover no-repeat;
+    /* background: url('./assets/Kho_Anh/Rth.png') top center / cover no-repeat; */
+    background: url('./background/Rth.png') top center / cover no-repeat;
+
 
     display: inline-block;
 }
@@ -1635,32 +1643,37 @@ html {
 
 @keyframes colorBackground {
     /* 0% {
-        background: url('../../assets/Kho_Anh/reviewer.png') top center / cover no-repeat;
+        background: url('/assets/Kho_Anh/reviewer.png') top center / cover no-repeat;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         border-radius: 0px 0px 20% 0px;
     } */
     20% {
-        background: url('../../assets/Kho_Anh/iStock-695349930.png') top center / cover no-repeat;
+        /* background: url('./assets/Kho_Anh/iStock-695349930.png') top center / cover no-repeat; */
+        background: url('./background/iStock-695349930.png') top center / cover no-repeat;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         border-radius: 0px 0px 20% 0px;
     }
     40% {
-        background: url('../../assets/Kho_Anh/pexels-klaus-nielsen-6303590.jpg') top center / cover no-repeat;
+        /* background: url('./assets/Kho_Anh/pexels-klaus-nielsen-6303590.jpg') top center / cover no-repeat; */
+        background: url('./background/pexels-klaus-nielsen-6303590.jpg') top center / cover no-repeat;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         border-radius: 0px 0px 20% 0px;
     }
     60% {
-        background: url('../../assets/Kho_Anh/pexels-pavel-danilyuk-5998448.jpg') top center / cover no-repeat;
+        /* background: url('./assets/Kho_Anh/pexels-pavel-danilyuk-5998448.jpg') top center / cover no-repeat; */
+        background: url('./background/pexels-pavel-danilyuk-5998448.jpg') top center / cover no-repeat;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         border-radius: 0px 0px 20% 0px;
     }
     80% {
-        background: url('../../assets/Kho_Anh/R\ \(1\).png') top center / cover no-repeat;
+        /* background: url('./assets/Kho_Anh/R\ \(1\).png') top center / cover no-repeat; */
+        background: url('./background/R\ \(1\).png') top center / cover no-repeat;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         border-radius: 0px 0px 20% 0px;
     }
     100% {
-        background: url('../../assets/Kho_Anh/Rth.png') top center / cover no-repeat;
+        /* background: url('./assets/Kho_Anh/Rth.png') top center / cover no-repeat; */
+        background: url('./background/Rth.png') top center / cover no-repeat;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         border-radius: 0px 0px 20% 0px;
     }
@@ -1875,6 +1888,7 @@ html {
 }
 
 .loi-nhan {
+    
     background-color: #3FD0D4;
     height: 230px;
     border-radius: 10px;
@@ -1889,11 +1903,22 @@ html {
 }
 
 .gmail-benh-nhan {
+    
     text-align: center;
     height: 40px;
 }
 
+.loi-nhan-benh-nhan , .gmail-benh-nhan {
+    display: none;
+}
+
+.hien-thi {
+    display: block;
+}
+
+
 .loi-nhan p{
+    
     color: #FFFF;
     padding: 14px 20px;
     line-height: 1.6;
@@ -1905,101 +1930,153 @@ html {
     margin-left: 10px;
 }
 
+/* ------------------------------------------------------chat-luong--------------------------------------------------------------------------- */
 
-
-
-
-/* ----------------------------------------------------------------------------------------------------------------------------------------- */
-/* .lich-lam-viec {
-    width: 100%;
-    float: right;
-    background-color: #FFFF;
-    border-radius: 20px;
+.danh-gia-chat-luong {
+    margin-top: 80px;
+    text-align: center;
+    color: #3FD0D4;
 }
 
-.ke-dong-3 {
-    background: #3FD0D4;
-    height: 4px;
-    border-radius: 10px;
-    margin: 10px 15px;
-}
-
-.hang-tieu-de {
-    display: flex;
-
-}
-
-.hang-tieu-de p {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 24px;
-    margin: 0 50px;
-}
-
-.benh-nhan {
-    height: 260px;
+.nen {
     background-color: #3FD0D4;
-    margin: 0 15px;
-    border-radius: 10px;
-    overflow: auto;
+    border-radius: 15px;
+    margin: 0 30px;
 }
-
-.benh-nhan p {
-    color: #FFFF;
-    margin: 20px 20px;
-    font-weight: 600;
+/* The actual timeline (the vertical ruler) */
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 30px auto;
+    /* background-color: #3FD0D4; */
+    /* border-radius: 15px; */
+  }
+  
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: white;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
 }
-
-.benh-nhan-1 {
-    display: flex;
+  
+/* Container around content */
+  .chat-luong {
+    padding: 10px 40px;
+    position: relative;
+    background-color: inherit;
+    width: 50%;
 }
-
-.benh-nhan-2 {
-    display: flex;
-}
-
-.loi-nhan-lich {
-    display: flex;
-    margin: 20px 15px;
+  
+  /* The circles on the timeline */
+.chat-luong::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background-color: white;
+    /* border: 4px solid #FF9F55; */
+    border: 6px solid #ff5555;
+    top: 15px;
+    border-radius: 50%;
+    z-index: 1;
     
 }
-
-.loi-nhan {
-    background-color: #3FD0D4;
-    height: 230px;
-    width: 60%;
-    border-radius: 10px;
-    margin-right: 20px;
-    overflow: auto;
+  
+  /* Place the container to the left */
+.left {
+    left: 0;
+}
+  
+  /* Place the container to the right */
+.right {
+    left: 50%;
 }
 
-.loi-nhan p{
-    color: #FFFF;
-    padding: 14px 20px;
-    line-height: 1.6;
-    font-size: 18px;
+/* Add arrows to the left container (pointing right) */
+.left::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
 }
 
-.lich {
-    float: right;
-    background-color: rgba(55, 60, 69, 1);
-    height: 230px;
-    width: 40%;
-    border-radius: 10px;
+/* Add arrows to the right container (pointing left) */
+.right::before {
+    content: " ";
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
 
-} */
+/* Fix the circle for containers on the right side */
+.right::after {
+    left: -16px;
+}
 
+/* The actual content */
+.content {
+    padding: 20px 30px;
+    background-color: white;
+    position: relative;
+    border-radius: 6px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 
+}
 
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+/* Place the timelime to the left */
+.timeline::after {
+    left: 31px;
+}
 
+/* Full-width containers */
+.chat-luong {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+}
 
+/* Make sure that all arrows are pointing leftwards */
+.chat-luong::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
 
+/* Make sure all circles are at the same spot */
+.left::after, .right::after {
+    left: 15px;
+}
 
+/* Make all right containers behave like the left ones */
+.right {
+    left: 0%;
+}
+}
 
-
-
-
-
+.img-chung-chi {
+    width: 90%;
+}
 
 
 
